syntax = "proto3";

package pb;

// Removed the import statement for "account.proto"
import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
// import "google/protobuf/timestamp.proto";

option go_package = "github.com/vantu-fit/saga-pattern/pb";
option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
    info: {
        title: "Simple Bank API";
        version: "1.0";
        contact: {
            name: "Vantufit";
            url: "https://github.com/grpc-ecosystem/grpc-gateway";
            email: "dotu30257@gmail.com";
        };
    };
};


message UploadRequest {
  bytes data = 1;
  string alt = 2;
  string product_id = 3;
}

message UploadResponse {
  repeated string url = 1;
}


message DeleteImageRequest {
  string id = 1;
}

message DeleteImageResponse {
  string success = 1;
}

message GetUrlRequest {
  string product_id = 1;
}

message GetUrlResponse {
  repeated string url = 1;
}

// Định nghĩa service để upload file lớn
service ServiceMedia {
  rpc Upload (UploadRequest) returns (UploadResponse) {
    option (google.api.http) = {
      post: "/api/v1/media/upload";
      body: "*";
    };
  }
  
  rpc DeleteImage (DeleteImageRequest) returns (DeleteImageResponse) {
    option (google.api.http) = {
      delete: "/api/v1/media/image/{id}";
    };
  }

  rpc GetImageUrl (GetUrlRequest) returns (GetUrlResponse) {
    option (google.api.http) = {
      get: "/api/v1/media/image/{product_id}";
    };
  }

  rpc GetVideoUrl (GetUrlRequest) returns (GetUrlResponse) {
    option (google.api.http) = {
      get: "/api/v1/media/video/{product_id}";
    };
  }
}